chore: add autogenerated routes from tsoa
